[package]
name = "zcl"
version = "0.1.0"
edition = "2024"

[dependencies]
crabtime = "1.1.3"
paste = "1.0.15"
thiserror = { version = "2.0.12", default-features = false }

[features]
default = ["std"]
std = []

[build-dependencies]
convert_case = "0.8.0"
prettyplease = "0.2.32"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full"] }
