[package]
name = "zcl"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Zigbee Cluster Library Definitions"
homepage = "https://github.com/patrickdag/zcl"
repository = "https://github.com/patrickdag/zcl"
keywords = [ "zigbee", "zcl", "matter", "embedded", "homeautomation"]
categories = [ "embedded", "no-std"]
authors = [ "patrickdag <patrickdag@failmail.dev>", "oddlama <oddlama@oddlama.org>"]
documentation = "https://docs.rs/zcl"

[dependencies]
thiserror = { version = "2.0.12", default-features = false }

[build-dependencies]
convert_case = "0.8.0"
prettyplease = "0.2.32"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full"] }
